--- a/index.html
+++ b/index.html
@@ -12,18 +12,20 @@
     <div class="wrapper">
         <div class="container">
             <div class="slider padding-side">
-                <div class="header">
+                <header class="header">
                     <a href="index.html" class="logo"><img src="img/logo.svg" alt="logo"></a>
-                    <ul class="menu">
-                        <li class="menu__list"><a href="index.html" class="menu__link menu__link_activ">HOME</a></li>
-                        <li class="menu__list"><a href="products.html" class="menu__link">PRODUCTS</a></li>
-                        <li class="menu__list"><a href="#" class="menu__link">HISTORY</a></li>
-                        <li class="menu__list"><a href="#" class="menu__link">SHOWROOM</a></li>
-                        <li class="menu__list"><a href="contacts.html" class="menu__link">CONTACT</a></li>
-                        <li class="menu__list"><a href="#" class="menu__link"><img src="img/search.svg" alt="search"></a></li>
+                    <nav>
+                        <ul class="menu">
+                            <li class="menu__list"><a href="index.html" class="menu__link menu__link_activ">HOME</a></li>
+                            <li class="menu__list"><a href="products.html" class="menu__link">PRODUCTS</a></li>
+                            <li class="menu__list"><a href="#" class="menu__link">HISTORY</a></li>
+                            <li class="menu__list"><a href="#" class="menu__link">SHOWROOM</a></li>
+                            <li class="menu__list"><a href="contacts.html" class="menu__link">CONTACT</a></li>
+                            <li class="menu__list"><a href="#" class="menu__link"><img src="img/search.svg" alt="search"></a></li>
 
-                    </ul>
-                </div>
+                        </ul>
+                    </nav>
+                </header>
                 <div class="slider__content">
                     <p class="slider__tag">Trending</p>
                     <h3 class="slider__name">Fishnet Chair</h3>
@@ -208,7 +210,7 @@
 
 
         </div>
-        <div class="footer padding-side">
+        <footer class="footer padding-side">
             <div class="fotter-center">
                 <div class="fotter-contacts">
                     <h3 class="fotter-h3">Contact Us</h3>
@@ -225,16 +227,20 @@
                 <div class="fotter-information">
                     <h3 class="fotter-h3">Useful Information</h3>
                     <div class="fotter-information-colum">
-                        <ul class="fotter-information-colum-links">
-                            <li class="fotter-information-colum-list"><a class="fotter-information-colum-link" href="#">Sales terms</a></li>
-                            <li class="fotter-information-colum-list"><a class="fotter-information-colum-link" href="#">Customer care</a></li>
-                            <li><a class="fotter-information-colum-link" href="#">Delivery</a></li>
-                        </ul>
-                        <ul class="fotter-information-colum-links">
-                            <li class="fotter-information-colum-list"><a class="fotter-information-colum-link" href="#">Architect accounts</a></li>
-                            <li class="fotter-information-colum-list"><a class="fotter-information-colum-link" href="#">Careers</a></li>
-                            <li class="fotter-information-colum-list"><a class="fotter-information-colum-link" href="#">Exchanges & returns</a></li>
-                        </ul>
+                        <nav>
+                            <ul class="fotter-information-colum-links">
+                                <li class="fotter-information-colum-list"><a class="fotter-information-colum-link" href="#">Sales terms</a></li>
+                                <li class="fotter-information-colum-list"><a class="fotter-information-colum-link" href="#">Customer care</a></li>
+                                <li><a class="fotter-information-colum-link" href="#">Delivery</a></li>
+                            </ul>
+                        </nav>
+                        <nav>
+                            <ul class="fotter-information-colum-links">
+                                <li class="fotter-information-colum-list"><a class="fotter-information-colum-link" href="#">Architect accounts</a></li>
+                                <li class="fotter-information-colum-list"><a class="fotter-information-colum-link" href="#">Careers</a></li>
+                                <li class="fotter-information-colum-list"><a class="fotter-information-colum-link" href="#">Exchanges & returns</a></li>
+                            </ul>
+                        </nav>
                     </div>
                 </div>
                 <div class="footer-subscribe">
@@ -242,7 +248,7 @@
                     <p class="footer-subscribe-p">Suscribe to know about our latest news, products and special offers just for suscribers.</p>
                     <div class="suscribe-input-div">
                         <input class="suscribe-input" type="text" placeholder="your email address">
-                        <img src="img/sub.png" alt="" class="suscribe-input-buttom">
+                        <a href="#"><img src="img/sub.png" alt="" class="suscribe-input-buttom"></a>
                     </div>
                 </div>
 
@@ -261,7 +267,7 @@
                     <a class="fotter-conditions" href="#">Terms & Conditions / Privacy policy & Cookies</a>
                 </div>
             </div>
-        </div>
+        </footer>
     </div>
 </body>
 
